# parallelism-exercise

./: .gitignore  README.md
parallelism_exercise_utils/: .gitignore  pyproject.toml
parallelism_exercise_utils/src/parallelism_exercise_utils/: .utils_sha1.txt  __init__.py  runtime.py  utils.py
src/: cookies.py  hz_loop.py  interfaces.py  log_statistics.py  parallel_party.py  rolling_file_lines_iterator.py  test_log_statistics.py  test_time_row.py  thread_runner.py  thread_tasks.py  time_row.py  utils.py
src/experimental/: experimental_time_line.py
src/thread_tasks/: __init__.py  cookie_updater.py  other.py  session_switcher.py  statistics_logger.py  time_logger.py
src/utils/: .utils_sha1.txt  runtime.py  utils.py
