[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "parallelism-exercise-utils"
version = "0.0.1"
authors = [
  { name="Ben Sembira", email="ben.sembira.1@gmail.com" },
]
description = "Utils package for the parallelism exercise"
readme = "README.md"
requires-python = ">=3.8"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
  "pynput",
  "types-pynput",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.package-data]
"*" = [".utils_sha1.txt"]